Added packages for npm

--- a/package.json
+++ b/package.json
@@ -26,17 +26,19 @@
     "!dist/**/*.spec.*"
   ],
   "peerDependencies": {
-    "svelte": "^4.2.0"
+    "svelte": "^4.2.0",
+		"@sveltejs/kit": "^1.24.0"
   },
 	"devDependencies": {
 		"@dxos/client": "0.2.0",
 		"@playwright/test": "^1.37.1",
 		"@sveltejs/adapter-auto": "^2.1.0",
-		"@sveltejs/kit": "^1.24.0",
+		"@sveltejs/package": "^2.2.2",
 		"delightful-ui": "^0.0.24",
 		"eslint": "^8.48.0",
 		"eslint-config-prettier": "^8.10.0",
 		"eslint-plugin-svelte": "^2.33.0",
+		"publint": "^0.1.9",
 		"prettier": "^2.8.8",
 		"prettier-plugin-svelte": "^2.10.1",
 		"qrcode-svg": "^1.1.0",
