Fixes to depenencies

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "dxos-shell-svelte",
-	"version": "0.0.2",
+	"version": "0.0.3",
 	"scripts": {
 		"dev": "vite dev",
     "build": "vite build && npm run package",
@@ -30,22 +30,24 @@
 		"@sveltejs/kit": "^1.24.0"
   },
 	"devDependencies": {
-		"@dxos/client": "0.2.0",
 		"@playwright/test": "^1.37.1",
 		"@sveltejs/adapter-auto": "^2.1.0",
 		"@sveltejs/package": "^2.2.2",
-		"delightful-ui": "^0.0.24",
 		"eslint": "^8.48.0",
 		"eslint-config-prettier": "^8.10.0",
 		"eslint-plugin-svelte": "^2.33.0",
 		"publint": "^0.1.9",
 		"prettier": "^2.8.8",
 		"prettier-plugin-svelte": "^2.10.1",
-		"qrcode-svg": "^1.1.0",
 		"svelte-check": "^3.5.1",
 		"typescript": "^5.2.2",
 		"vite": "^4.4.9",
-		"vitest": "^0.32.4",
+		"vitest": "^0.32.4"
+	},
+	"dependencies": {
+		"@dxos/client": "0.2.0",
+		"delightful-ui": "^0.0.24",
+		"qrcode-svg": "^1.1.0",
 		"xstate": "5.0.0-beta.29"
 	},
 	"svelte": "./dist/index.js",
